--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -61,7 +61,7 @@
 
   <div class="form-group">
     <%= f.label :branch_json_url, :class => "form-control-label" %>
-    <%= f.text_area :branch_json_url , :class => "form-control", :placeholder => "http://5g-cimaster-4.eecloud.dynamic.nsn-net.net:8080/job/MASTER_DEV/job/AIRPHONE/", :autofocus => true, :required => true %>
+    <%= f.text_area :branch_json_url , :class => "form-control", :placeholder => "ex: http://5g-cimaster-4.eecloud.dynamic.nsn-net.net:8080/job/MASTER_DEV/job/AIRPHONE/", :autofocus => true, :required => true %>
   </div>
 
 
