added loading indicator when getting jenkins data

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,13 +25,12 @@ body {
 }
 
 .wrapper {
-    width: 100%;
-    // min-height: 100%;
+    width: 100%; // min-height: 100%;
     // overflow: hidden;
     transition: 0.5s;
 }
 
-.overflow-auto{
+.overflow-auto {
     overflow-y: auto !important;
 }
 
@@ -130,16 +129,24 @@ body {
     overflow: hidden;
 }
 
-.text-wrap{
+.text-wrap {
     white-space: normal;
     overflow-wrap: break-word;
 }
 
 
+/* Footer */
+
+#loading {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+
 /* Media Queries */
 
-@media (min-width: 576px){
-}
+@media (min-width: 576px) {}
 
 @media (min-width: 768px) {
     #main-nav,
@@ -159,6 +166,7 @@ body {
     }
     .overflow-hidden {
         overflow: hidden;
+        text-overflow: ellipsis;
     }
     .translate-y {
         flex: 0 0 30%;
@@ -174,6 +182,7 @@ body {
 @media (min-width: 1440px) {
     .translate-x {
         flex: 0 0 31.33% !important;
+        width: 31.33% !important;
     }
 }
 
