--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -135,9 +135,19 @@ body {
 }
 
 
-/* Footer */
+/* loading */
 
-#loading {
+#preload{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    color: #fff;
+    text-align: center;
+    font-size: 2em;
+}
+
+.loading {
     color: #fff;
     text-align: center;
     margin-bottom: 1rem;
