--- a/app/views/branches/updates.html.erb
+++ b/app/views/branches/updates.html.erb
@@ -1,225 +1,207 @@
 <% branches = init_branches %>
 
 <% if not branches.nil? %>
+	<div class="carousel-inner h-100">
+	<% slide = 0 %>
+	<% branches.each do |branch| %>
+		<% slide += 1 %>
+		<div class="carousel-item h-100" id="<%= slide %>">
+			<div class="wrapper">
+				<!-- SIDE NAV -->
+				<aside id="health" class="card-inverse overflow-auto">
+					<!-- CHART -->
+					<div class="mx-auto" style="max-height: 200px; max-width: 200px;">
+						<canvas id="doughnutChart<%= slide %>"></canvas>
+						<input type="hidden" id="success<%= slide %>" value="<%= branch.reportHealth("success")%>"></input>
+						<input type="hidden" id="fail<%= slide %>" value="<%= branch.reportHealth("fail")%>"></input>
+						<input type="hidden" id="unstable<%= slide %>" value="<%= branch.reportHealth("unstable")%>"></input>
+					</div>
+					<h6 class="text-center">Jobs with builds: <%= branch.reportHealth("builds") %></h6>
 
-<div class="carousel-inner h-100">
+					<% folders = branch.folders %>
+					<!-- PROGRESS BARS -->
+					<div class="h-100 overflow-auto" style="min-height: 150px;">
+						<% if not folders.nil? and folders.size != 0 %>
+							<ul class="list-group list-group-flush">
+								<% folders.each do |folder| %>
+									<% stat = branch.getStatus(folder) %>
+									<li class="list-group-item justify-content-between bg-transparent">
+										<%= folder["name"] %>
+										<span>
+										<% if stat == -1 %>
+											N/A
+										<% else %>
+											<%= stat %>%
+										<% end %>
+										</span>
+										<div class="progress w-100">
+											<div class="progress-bar" style="width: <%= stat %>%; height: 5px;"></div>
+										</div>
+									</li>
+								<% end %>
+							</ul>
+						<% else %>
+							<h5 class="text-center">NO FOLDERS</h5>
+						<% end %>
+					</div>
 
-  <% slide = 0 %>
-  
-  <% branches.each do |branch| %>
+					<!-- WORST HEALTH -->
+					<div class="alert alert-danger text-center rounded-0 my-3">
+						<% if branch.reportHealth("worst") == 0 %>
+							Worst Health: N/A
+						<% else %>
+							<%= branch.reportHealth("worst") %>
+						<% end %>
+					</div>
 
-    <% slide += 1 %>
+					<!-- COMMITS -->
+					<div>
+						<h5 class="ml-2">Recent builds:</h5>
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item justify-content-between bg-transparent">
+								Today: <b class="text-white"><%= branch.countBuildsPerDay(branch.parsed["jobs"]) %></b>
+							</li>
+							<li class="list-group-item justify-content-between bg-transparent">
+								This week: <b class="text-white"><%= branch.countBuildsPerWeek(branch.parsed["jobs"]) %></b>
+							</li>
+						</ul>
+					</div>
+				</aside>
 
-    <div class="carousel-item h-100" id="<%= slide %>">
-      <div class="wrapper">
-        <!-- SIDE NAV -->
-        <aside id="health" class="card-inverse overflow-auto">
-          <!-- CHART -->
-          <div class="mx-auto" style="max-height: 200px; max-width: 200px;">
-            <canvas id="doughnutChart<%= slide %>"></canvas>
-            <input type="hidden" id="success<%= slide %>" value="<%= branch.reportHealth("success")%>"></input>
-            <input type="hidden" id="fail<%= slide %>" value="<%= branch.reportHealth("fail")%>"></input>
-            <input type="hidden" id="unstable<%= slide %>" value="<%= branch.reportHealth("unstable")%>"></input>
-          </div>
-          <h6 class="text-center">Jobs with builds: <%= branch.reportHealth("builds") %></h6>
+				<!-- NAV BAR -->
+				<nav id="main-nav" class="navbar fixed-top navbar-inverse">
+					<button class="navbar-toggler navbar-toggler-left" type="button">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<h1 class="mb-0 text-white text-center"><%= branch.name %></h1>
+				</nav>
 
-          <% folders = branch.folders %>
-          <!-- PROGRESS BARS -->
-          <div class="h-100 overflow-auto" style="min-height: 150px;">
-            <% if not folders.nil? and folders.size != 0 %>
-            <ul class="list-group list-group-flush">
-                <% folders.each do |folder| %>
-                  <% stat = branch.getStatus(folder) %>
-                  <li class="list-group-item justify-content-between bg-transparent">
-                    <%= folder["name"] %>
-                    <span>
-                      <% if stat == -1 %>
-                        N/A
-                      <% else %>
-                        <%= stat %>%
-                      <% end %>
-                    </span>
-                    <div class="progress w-100">
-                      <div class="progress-bar" style="width: <%= stat %>%; height: 5px;"></div>
-                    </div>
-                  </li>
-                <% end %>
-            </ul>
-            <% else %>
-              <h5 class="text-center">NO FOLDERS</h5>
-            <% end %>
-          </div>
+				<!-- MAIN CONTENT -->
+				<main id="branch" class="container-fluid h-100 d-flex flex-column overflow-auto" style="padding-top: 4em;">
 
-          <!-- WORST HEALTH -->
-          <div class="alert alert-danger text-center rounded-0 my-3">
-            <% if branch.reportHealth("worst") == 0 %>
-              Worst Health: N/A
-            <% else %>
-              <%= branch.reportHealth("worst") %>
-            <% end %>
-          </div>
+					<!-- ALERT -->
+					<% if branch.display == true %>
+						<div class="alert alert-warning">
+							<strong>Announcement!</strong> <%= branch.msg %>
+						</div>
+					<% end %>
 
-          <!-- COMMITS -->
-          <div>
-              <h5 class="ml-2">Recent builds:</h5>
-              <ul class="list-group list-group-flush">
-                  <li class="list-group-item justify-content-between bg-transparent">
-                      Today: <b class="text-white"><%= branch.countBuildsPerDay(branch.parsed["jobs"]) %></b>
-                  </li>
-                  <li class="list-group-item justify-content-between bg-transparent">
-                      This week: <b class="text-white"><%= branch.countBuildsPerWeek(branch.parsed["jobs"]) %></b>
-                  </li>
-              </ul>
-          </div>
-        </aside>
+					<div class="loading"></div>
 
-        <!-- NAV BAR -->
-        <nav id="main-nav" class="navbar fixed-top navbar-inverse">
-          <button class="navbar-toggler navbar-toggler-left" type="button">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-          <h1 class="mb-0 text-white text-center"><%= branch.name %></h1>
-        </nav>
+					<!-- ROW -->
+					<section class="row" style="flex: 1 auto;">
+						<!-- FOLDERS -->
+						<article id="builds" class="col-md-8 col-xl-10 d-flex">
+							<% if not folders.nil? and folders.size != 0 %>
+							<!-- CARDS -->
+							<div class="card-deck flex-nowrap overflow-hidden w-100">
+								<% folders.each do |folder| %>
+								<!-- ONE CARD -->
+								<div class="card border-0 translate-x">
+									<% folderStatus = branch.getStatus(folder) %>
+									<% folderStatusProps = branch.getFolderProps(folderStatus) %>
+									<!-- CARD HEADER -->
+									<h4 class="card-header card-inverse <%= folderStatusProps["bgColor"] %>">
+										<i class="fa fa-folder-open"></i>   <%= folder["name"] %>
+										<i class="fa pull-right <%= folderStatusProps["icon"] %>"></i>
+									</h4>
+									<% latestJob = branch.getLatestJob(folder["jobs"]) %>
+									<% latestBuild = branch.getLatestBuild(folder) %>
+									<!-- Build equals null -->
+									<% if latestBuild.nil? %>
+									<div class="card-block bg-faded p-3" style="flex: 0 auto;">
+										<div class="alert alert-info mb-0">
+											<b>NO RECENT BUILDS</b> 
+										</div>
+									</div>
 
-        <!-- MAIN CONTENT -->
-        <main id="branch" class="container-fluid h-100 d-flex flex-column overflow-auto"
-         style="padding-top: 4em;">
+									<!-- Build not equals null -->
+									<% else %>
+									<% latestCommit = branch.getLatestCommit(latestBuild) %>
+									<div class="card-block bg-faded p-3" style="flex: 0 auto;">
+										<!-- COMMIT INFO -->
+										<% if latestCommit.nil? %>
+											<div class="alert alert-info mb-0">
+												<b>EMPTY CHANGESET FOR BUILD#<%=latestBuild["number"]%></b> 
+											</div>
+										<% else %>
+											<div class="alert alert-info mb-0">
+												<b><%= latestCommit["author"]["fullName"] %></b> 
+												<small class="badge badge-primary pull-right"><%= latestCommit["id"][0..7] %></small>
+												<small class="d-block text-center"><%= latestCommit["msg"] %></small>
+											</div>
+										<% end %>
+									</div>
+									<% end %>
+									<!-- LIST OF SUBJOBS -->
+									<% subjobs = folder["jobs"] %>
+									<% if not subjobs.nil? %>
+										<ul class="list-group list-group-flush bg-faded" style="flex: 1 auto;">
+											<% subjobs.each do |subjob| %>
+												<% if subjob["_class"] == "com.cloudbees.hudson.plugins.folder.Folder" %>
+													<% subjobStatus = branch.getFolderProps(branch.getStatus(subjob)) %>
+													<% icon = "fa-folder" %>
+												<% else %>
+													<% subjobStatus = branch.getProjectProps(subjob) %>
+													<% icon = subjobStatus["icon"] %>
+												<% end %>
+												<li class="list-group-item justify-content-between <%= subjobStatus["bgColor"] %> <%= subjobStatus["color"] %>">
+													<span class="w-75 overflow-hidden"><%= subjob["name"] %></span>
+													<i class="fa <%= icon %>"></i>
+												</li>
+											<% end %>
+										</ul>
+									<% end %>
+									<!-- CARD FOOTER -->
+									<div class="card-footer <%= folderStatusProps["bgColor"] %> card-inverse text-center p-1">
+										<% if not latestBuild.nil? %>
+											<small>
+												<h6 class="mb-0"><b>BUILD #<%= latestBuild["number"] %> - <%=h truncate(latestJob ["name"], :length => 23) %></b></h6>
+												<%= Time.at(latestBuild["timestamp"]*0.001).to_datetime.strftime("%I:%M%p - %b %d, %Y (%a)") %>
+											</small>
+										<% end %>
+									</div>
+								</div>
+								<% end %>
+							</div>
+							<% else %>
+								<h3 class="text-center card-inverse align-self-center w-100">NO FOLDERS</h3>
+							<% end %>
+						</article>
 
-          <!-- ALERT -->
-          <% if branch.display == true %>
-            <div class="alert alert-warning">
-              <strong>Announcement!</strong> <%= branch.msg %>
-            </div>
-          <% end %>
-
-          <div class="loading"></div>
-
-          <!-- ROW -->
-          <section class="row" style="flex: 1 auto;">
-
-            <!-- FOLDERS -->
-            <article id="builds" class="col-md-8 col-xl-10 d-flex">
-              <% if not folders.nil? and folders.size != 0 %>
-              <!-- CARDS -->
-              <div class="card-deck flex-nowrap overflow-hidden w-100">
-                  <% folders.each do |folder| %>
-                  <!-- ONE CARD -->
-                  <div class="card border-0 translate-x">
-                    <% folderStatus = branch.getStatus(folder) %>
-                    <% folderStatusProps = branch.getFolderProps(folderStatus) %>
-                    <!-- CARD HEADER -->
-                    <h4 class="card-header card-inverse <%= folderStatusProps["bgColor"] %>">
-                      <i class="fa fa-folder-open"></i>   <%= folder["name"] %>
-                      <i class="fa pull-right <%= folderStatusProps["icon"] %>"></i>
-                    </h4>
-                    <% latestJob = branch.getLatestJob(folder["jobs"]) %>
-                    <% latestBuild = branch.getLatestBuild(folder) %>
-                    <!-- Build equals null -->
-                    <% if latestBuild.nil? %>
-                      <div class="card-block bg-faded p-3" style="flex: 0 auto;">
-                        <div class="alert alert-info mb-0">
-                          <b>NO RECENT BUILDS</b> 
-                        </div>
-                      </div>
-
-                    <!-- Build not equals null -->
-                    <% else %>
-                      <% latestCommit = branch.getLatestCommit(latestBuild) %>
-                      <div class="card-block bg-faded p-3" style="flex: 0 auto;">
-
-                      <!-- COMMIT INFO -->
-                      <% if latestCommit.nil? %>
-                          <div class="alert alert-info mb-0">
-                            <b>EMPTY CHANGESET FOR BUILD#<%=latestBuild["number"]%></b> 
-                          </div>
-                      <% else %>
-                          <div class="alert alert-info mb-0">
-                            <b><%= latestCommit["author"]["fullName"] %></b> 
-                            <small class="badge badge-primary pull-right"><%= latestCommit["id"][0..7] %></small>
-                            <small class="d-block text-center"><%= latestCommit["msg"] %></small>
-                          </div>
-                      <% end %>
-                      </div>
-                    <% end %>
-                    <!-- LIST OF SUBJOBS -->
-                    <% subjobs = folder["jobs"] %>
-                    <% if not subjobs.nil? %>
-                      <ul class="list-group list-group-flush bg-faded" style="flex: 1 auto;">
-                      <% subjobs.each do |subjob| %>
-                        <% if subjob["_class"] == "com.cloudbees.hudson.plugins.folder.Folder" %>
-                            <% subjobStatus = branch.getFolderProps(branch.getStatus(subjob)) %>
-                            <% icon = "fa-folder" %>
-                        <% else %>
-                            <% subjobStatus = branch.getProjectProps(subjob) %>
-                            <% icon = subjobStatus["icon"] %>
-                        <% end %>
-                        <li class="list-group-item justify-content-between <%= subjobStatus["bgColor"] %> <%= subjobStatus["color"] %>">
-                          <span class="w-75 overflow-hidden"><%= subjob["name"] %></span>
-                          <i class="fa <%= icon %>"></i>
-                        </li>
-                      <% end %>
-                      </ul>
-                    <% end %>
-                    <!-- CARD FOOTER -->
-                    <div class="card-footer <%= folderStatusProps["bgColor"] %> card-inverse text-center p-1">
-
-                      <% if not latestBuild.nil? %>
-                      <small>
-                        <h6 class="mb-0"><b>BUILD #<%= latestBuild["number"] %> - <%=h truncate(latestJob ["name"], :length => 23) %></b></h6>
-                        <%= Time.at(latestBuild["timestamp"]*0.001).to_datetime.strftime("%I:%M%p - %b %d, %Y (%a)") %>
-                      </small>
-                      <% end %>
-
-                    </div>
-                  </div>
-                  <% end %>
-              </div>
-              <% else %>
-                <h3 class="text-center card-inverse align-self-center w-100">NO FOLDERS</h3>
-              <% end %>
-            </article>
-
-            <!-- PROJECTS -->
-            <article id="projects" class="col-md-4 col-xl-2 d-flex">
-              <% projects = branch.projects %>
-              <% if not projects.nil? and projects.size != 0 %>
-              <ul class="list-group list-group-flush overflow-hidden w-100">
-                <% projects.each do |project| %>
-                  <% projectStatus = branch.getProjectProps(project) %>
-                  <li class="list-group-item translate-y <%= projectStatus["bgColor"] %> <%= projectStatus["color"] %>">
-                    <i class="fa fa-3x <%= projectStatus["icon"] %>"></i>
-                    <div style="width: 80%;">
-                        <h5 class="mb-0 text-wrap"><%= project["name"] %></h5>
-                        <% health = branch.reportProjectHealth(project) %>
-                        <small style="line-height: 1 !important;">
-                          <% if health == [] %>
-                              Not built
-                          <% elsif project["color"] == "aborted" %>
-                              Recently aborted.
-                          <% else %>
-                              <%= health %>
-                          <% end %>
-                        </small>
-                    </div>
-                  </li>
-                <% end %>
-              </ul>
-              <% else %>
-                <h3 class="text-center card-inverse align-self-center w-100">NO PROJECTS</h3>
-              <% end %>
-            </article>
-          </section>
-        </main>
-      </div>
-    </div>
-  <% end %>
-</div>
-<a class="carousel-control-prev" href="" role="button" data-slide="prev">
-  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" href="" role="button" data-slide="next">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
+						<!-- PROJECTS -->
+						<article id="projects" class="col-md-4 col-xl-2 d-flex">
+							<% projects = branch.projects %>
+							<% if not projects.nil? and projects.size != 0 %>
+								<ul class="list-group list-group-flush overflow-hidden w-100">
+									<% projects.each do |project| %>
+										<% projectStatus = branch.getProjectProps(project) %>
+										<li class="list-group-item translate-y <%= projectStatus["bgColor"] %> <%= projectStatus["color"] %>">
+											<i class="fa fa-3x <%= projectStatus["icon"] %>"></i>
+											<div style="width: 80%;">
+												<h5 class="mb-0 text-wrap"><%= project["name"] %></h5>
+												<% health = branch.reportProjectHealth(project) %>
+												<small style="line-height: 1 !important;">
+													<% if health == [] %>
+														Not built
+													<% elsif project["color"] == "aborted" %>
+														Recently aborted.
+													<% else %>
+														<%= health %>
+													<% end %>
+												</small>
+											</div>
+										</li>
+									<% end %>
+								</ul>
+							<% else %>
+								<h3 class="text-center card-inverse align-self-center w-100">NO PROJECTS</h3>
+							<% end %>
+						</article>
+					</section>
+				</main>
+			</div>
+		</div>
+	<% end %>
+	</div>
 <% end %>
